--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -18,4 +18,19 @@ jobs:
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
           zip -r testrepo.zip testrepo/
+      - name: Install PHP with extensions
+        uses: shivammathur/setup-php@v2
+      
+      - name: Install dependencies with composer
+        run: cd testrepo; composer install --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
+
+      - name: Install dependencies with composer
+        env:
+            API_SECRET: ${{ secrets.API_SECRET }}
+        run: |
+          curl -vv \
+          -F "key=$API_SECRET" \
+          -X POST \
+          -F "ModuleVersionUpload[zipFile]=@testrepo.zip" \
+          https://api.humhub.com/v1/marketplace/upload?moduleId=testrepo
           
