--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Upload Package to HumHub
         run: |
-          curl -v --fail \
+          curl -v --fail-with-body \
           -F "key=${{secrets.API_KEY}}" \
           -F "ModuleVersionUpload[zipFile]=@testrepo.zip" \
           https://api.humhub.com/v1/marketplace/upload?moduleId=testrepo
