--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Upload Package to HumHub
         run: |
-          curl -v --fail \
+          curl --fail \
           -F "key=${{secrets.API_KEY}}" \
           -F "ModuleVersionUpload[zipFile]=@${{ github.event.repository.name }}.zip" \
           https://api.humhub.com/v1/marketplace/upload?moduleId=${{ github.event.repository.name }}
